--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,63 @@
+@import url("../node_modules/@substrate-system/css-normalize/dist/index.css");
+
+:root {
+    --focus-color: #00c8ff;
+    --middle-gray: #d3d3d363;
+}
+
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid;
+
+    & h1 {
+        font-size: 1.2rem;
+    }
+}
+
+.route {
+    margin-top: 2rem;
+}
+
+h2 {
+    margin-bottom: 1rem;
+}
+
+hr {
+    margin: 1rem 0;
+}
+
+nav {
+    margin: 2rem 0;
+
+    & ul {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        justify-content: space-around;
+        gap: 1rem;
+    }
+}
+
+.controls {
+    text-align: right;
+}
+
+#root {
+    max-width: 40rem;
+    margin: 0 auto;
+}
+
+input.input {
+    border: 1px solid;
+    border-radius: 0;
+}
+
 .count-controls {
     list-style: none;
     padding: 0;
@@ -9,19 +69,16 @@
 
 button {
     cursor: pointer;
-
-    &:hover {
-        background: seashell;
-    }
+    border-radius: 0;
 }
 
-body {
-    & div {
-        margin-bottom: 1rem;
-    }
+button.btn, a.btn {
+    border: 1px solid;
+    border-radius: 0;
+    padding: 0.5rem 1rem;
 }
 
 pre {
     padding: 2rem;
-    background-color: #d3d3d363;
+    background-color: var(--middle-gray);
 }
